--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.2.7",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
